--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
     <meta property="twitter:description" content="De nummer 1 leeroplossing voor moderne teams. Maak je organisatie AI-vaardig en compliant in 5 minuten per dag." />
     <meta property="twitter:image" content="https://www.qrio.nl/og-image.jpg" />
 
+    <!-- Fonts: Preconnect to improve loading speed -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
