feat: implement cookie consent management with a banner, context, and analytics integration, and add new Privacy Policy and Education pages.

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="nl">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17844578005"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GTAG_ID%"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'AW-17844578005');
+      gtag('config', '%VITE_GTAG_ID%');
     </script>
     <meta charset="UTF-8" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://www.googleadservices.com https://www.google.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://formsubmit.co https://www.google-analytics.com https://plausible.io https://pagead2.googlesyndication.com https://www.googleadservices.com https://googleads.g.doubleclick.net https://www.google.com; font-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self' https://formsubmit.co;">
